--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   --purple: #6859bb;
   --yellow: #ffc260;
   --hot: #f75c5c;
+  --sky: #94cdff;
   --pure: #ffffff;
 }
 
@@ -88,7 +89,6 @@ body {
 }
 
 .input-group {
-  /* padding: 6px; */
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -167,18 +167,8 @@ body {
   -ms-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
 }
-/* 
-#floating-box.active {
-  background-color: var(--primary);
-}
-
-#floating-box.active #drawer {
-  opacity: 1;
-  pointer-events: auto;
-} */
 
 #floating-box:hover {
-  background-color: var(--primary);
   pointer-events: auto;
 }
 
@@ -232,8 +222,8 @@ body {
 .delete-btn::after {
   content: "";
   position: absolute;
-  left: -80px;
-  top: 0;
+  left: -72px;
+  top: 1px;
   width: max-content;
   padding: 4px;
   background-color: var(--primary);
@@ -249,12 +239,12 @@ body {
 }
 
 #drawer .edit-btn::after {
-  content: "Edit Todo";
+  content: "Edit Todos";
 }
 
 #drawer .delete-btn::after {
-  content: "Delete Todo";
-  left: -95px;
+  content: "Delete Todos";
+  left: -86px;
 }
 
 #drawer .edit-btn:hover::after,
@@ -270,7 +260,7 @@ body {
   justify-content: space-between;
 }
 
-.list-wrapper li #delete-item,
+.list-wrapper li .delete-item,
 #edit-item {
   background-color: transparent;
   border: none;
@@ -279,8 +269,12 @@ body {
   cursor: pointer;
 }
 
-.list-wrapper li #delete-item i {
+.list-wrapper li .delete-item i {
   color: var(--hot);
+}
+
+.list-wrapper li .undo {
+  color: var(--sky) !important;
 }
 
 .list-wrapper li #edit-item i {
@@ -296,4 +290,10 @@ body {
   color: var(--yellow);
   border-bottom: 1px solid var(--yellow);
   padding-bottom: 6px;
+}
+
+.list-wrapper li span.todo-name.disabled {
+  text-decoration: line-through;
+  color: var(--hot);
+  font-style: italic;
 }
