--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   margin: 1rem 0;
   font-size: 2.5rem;
   user-select: none;
+  margin-top: 2rem;
 }
 
 .wrapper {
@@ -86,6 +87,7 @@ body {
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
+  margin-top: 3rem;
 }
 
 .input-group {
@@ -296,4 +298,15 @@ body {
   text-decoration: line-through;
   color: var(--hot);
   font-style: italic;
+}
+
+/*  */
+
+@media screen and (max-width: 500px) {
+  .heading {
+    font-size: 1.2rem;
+    text-align: center;
+    border-bottom: 1px solid var(--primary);
+    padding-bottom: 4px;
+  }
 }
